# learning-dvc

./: .gitignore  data.dvc  main.py  pyproject.toml
.dvc/: config
