[tool.poetry]
name = "learning-dvc"
version = "0.1.0"
description = ""
authors = ["RBialowas <radoslaw.bialowas@boostcom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {extras = ["s3"], version = "^2.9.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
